test/syntax/valid/08_semicolon_as_newline.sg
// Semicolon is an alias for newline — both are sequential separators.
import io

io.print("a"); io.print("b"); io.print("c")
