test/syntax/errors/03_trailing_comma_blank_then_code.sg
// expect-error: unexpected ',': expected a statement, ';', or newline after ','
// Trailing comma before a blank line — the blank line counts as a newline.
import io

io.print("a"), io.print("b"),

io.print("c")
